[gd_scene load_steps=5 format=3 uid="uid://cdyhnl804upnt"]

[ext_resource type="Script" path="res://Script/button.gd" id="1_lnaj1"]
[ext_resource type="Texture2D" uid="uid://th4qir3ewgi5" path="res://Images/button1.png" id="2_orpxn"]
[ext_resource type="AudioStream" uid="uid://msrcofqqid4s" path="res://Audio/SFX/travel.ogg" id="3_jf6jo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr15j"]
size = Vector2(7, 7.5)

[node name="Button" type="Node2D"]
script = ExtResource("1_lnaj1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("2_orpxn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(0, 7.75)
shape = SubResource("RectangleShape2D_lr15j")

[node name="TravelSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_jf6jo")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_button_pressed"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_button_not_pressed"]
